cms/package/skin/src/main/webapp/screen.css
/* ... */
.createtyperequest_ico{background-image:url("images/icons/document-new-16.png")}

#context-menu-container {
  text-align: left;
  position: absolute;
  display: block;
  z-index: 10000;
  color: #000;
  padding:3px;
  left: -1000px;
  top: -1000px;
}

#global-feedback-container {
  border: 1px solid #e3e3e3;
  background-color: #FFF6E0;
  color: #333333;
  padding-top: 2px;
}

li.feedbackPanelERROR {
  margin: 5px;
  display: inline;
}

table.hippo-defaultcontent td {
  vertical-align: top;
}

.smooth_load_workaround {
  display: none;
  left: -2000px;
  top: -2000px;
  position: absolute;
}

/* Apply scrollbars to modern browsers */
table.hippo-list-documents > tbody {
  overflow-x: hidden;
  overflow-y: auto;
}

.hippo-accordion-unit-bottom {
  background-color: #ebebeb;
  cursor: pointer;
  height: 26px;
  margin: 0;
  padding:0;
  border:0;
}

